# VE_Data_Collection

./: .gitignore  README.md  middleware.ts  next.config.ts  package.json  prisma.config.ts  proxy.ts
app/: actions.ts  layout.tsx  page.tsx
app/play/: page.tsx
prisma/: schema.prisma  seed.ts
scripts/: import_ai_responses.ts  import_data.ts  import_questions.ts
scripts/ai_inference/: .gitignore  pyproject.toml
scripts/ai_inference/src/: download_batches.py  download_robotics_batch.py  submit_batches.py  submit_robotics_batch.py
